examples/traefik-official/traefik-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-webui
  namespace: kube-system
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`traefik.pbeta.xyz`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: traefik
      port: 80
